# photo-post-processing

./: .bandit  .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  README.md  bandit-report.json  conftest.py  pyproject.toml  pytest.ini  requirements-dev.txt  safety-report.json  setup.cfg
.github/workflows/: ci.yml
docs/: README.md  TESTING_VALIDATION.md  best_practices_guide.md  implementation_roadmap.md
docs/explanations/: brightness_vs_exposure.py  custom_brightness_demo.py  resize_only_mode.py  sand_brightness_fix.py
docs/guides/: menu_system.md  raw_vs_jpeg.md
src/: process_photos.py
src/pro_photo_processor/: cli.py  pipeline.py  process_photos.py  utils.py
src/pro_photo_processor/config/: config.py
src/pro_photo_processor/core/: image_processing.py  image_utils.py
src/pro_photo_processor/io/: file_operations.py
src/pro_photo_processor/io/others/: file_copy_move.py
src/pro_photo_processor/presets/: photoshop_tools.py
src/utils/: __init__.py  config.py  file_operations.py  format_optimizer.py  image_processing.py  logging_config.py  photoshop_tools.py  raw_processing.py  raw_processing_enhanced.py  system_utils.py
src/utils/others/: copy_or_cut_files.py
tests/: README.md  __init__.py  analyze_raw_vs_jpeg.py  run_tests.py  sports_visual_test.py  test_brightness_method.py  test_copy_or_cut_files.py  test_enhanced_raw.py  test_mode_12_fixes.py  test_rawpy_compatibility.py  test_resize_only.py  test_sports_fix.py
tests/config/: test_config.py
tests/core/: test_brightness_method.py  test_image_processing.py  test_quality_impact.py  test_sports_visual_test.py
tests/format_comparison/: JPEG_vs_NEF_Analysis.md  format_optimizer.py  integration_test.py  jpeg_vs_nef_analysis.py  preset_optimization.py  raw_vs_jpeg_guide.py  test_optimizer.py  your_pipeline_guide.py
tests/image_processing/: __init__.py  test_quality_impact.py
tests/io/: test_copy_or_cut_files.py  test_file_operations.py  test_logging_config.py
tests/pipeline/: test_pipeline.py
tests/preset_analysis/: __init__.py  compare_presets.py
tests/presets/: test_compare_presets.py  test_format_optimizer.py  test_integration_test.py  test_optimizer.py  test_preset_optimization.py  test_sports_fix.py
tests/raw/: test_enhanced_raw.py  test_raw_quality.py
tests/raw_processing/: __init__.py  test_raw_quality.py
tests/utils/: test_utils.py
